# dsh-bio-rs

./: .gitignore  Cargo.toml  HEADER.txt  Makefile  README.md
src/: cli.rs  fasta_to_parquet.rs  fastq_to_parquet.rs  main.rs  vcf_to_parquet.rs
