[package]
name = "dsh-bio"
version = "4.0.0-snapshot1"
edition = "2024"

[dependencies]
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
clap = { version = "4.6.0", features = ["derive", "env", "cargo"] }
duckdb = { version = "1.10502.0", features = ["bundled", "parquet"] }
env_logger = "0.11.10"
log = "0.4.29"
noodles = { version = "0.109.0", features = ["fasta", "fastq", "vcf"] }
